<resources>
    <string name="app_name">SampleFilter</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">HomeFragment</string>
    <string name="list_fragment_label">ListFragment</string>
    <string name="filter">Filtering Accounts</string>
    <string name="networking">Networking</string>
    <string name="previous">Previous</string>
    <string name="usecase3">UseCase 3</string>
    <string name="usecase4">UseCase 4</string>
    <string name="usecase5">UseCase 5</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>