<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".HomeFragment">

    <Button
        android:id="@+id/button1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="#ff0000"
        android:textColor="#ffffff"
        android:layout_marginTop="50dip"
        android:text="@string/filter" />

    <Button
        android:id="@+id/button2"
        android:layout_width="250dp"
        android:background="#ff0000"
        android:textColor="#ffffff"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip"
        android:text="@string/networking" />

    <Button
        android:id="@+id/button3"
        android:layout_width="250dp"
        android:background="#ff0000"
        android:textColor="#ffffff"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip"
        android:text="@string/usecase3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="#ff0000"
        android:textColor="#ffffff"
        android:layout_marginTop="50dip"
        android:text="@string/usecase4" />

    <Button
        android:id="@+id/button5"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="#ff0000"
        android:textColor="#ffffff"
        android:layout_marginTop="50dip"
        android:text="@string/usecase5" />
</LinearLayout>